home page update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,223 @@
 
     </header>
 
-    <main></main>
+    <main>
+
+        <div class="home-main-head">
+
+            <div class="home-head-text">
+                <p class="did">Let Your Home <br> Be Unique</p>
+                <p class="lil">There are many variations of the passages of lorem Ipsum <br> fromavailable,variations of the passages.</p>
+                <a href="#" class="btn">Get Started <img src="img/Vector.svg" alt="vectore"></a>
+            </div>
+        </div>
+
+        <div class="home-work">
+            <div class="work-text">
+                <p class="work-did">Project Plan</p>
+                <p class="work-lil">There are many variations of the <br> passages of lorem Ipsum from <br> available, majority.</p>
+                <a href="#">Read More <img src="img/Vector.svg" alt="vector"></a>
+            </div>
+
+            <div class="work-text">
+                <p class="work-did">Interior Work</p>
+                <p class="work-lil">There are many variations of the <br> passages of lorem Ipsum from <br> available, majority.</p>
+                <a href="#">Read More <img src="img/Vector.svg" alt="vector"></a>
+            </div>
+
+            <div class="work-text">
+                <p class="work-did">Realization</p>
+                <p class="work-lil">There are many variations of the <br> passages of lorem Ipsum from <br> available, majority.</p>
+                <a href="#">Read More <img src="img/Vector.svg" alt="vector"></a>
+            </div>
+        </div>
+
+        <div class="about-us">
+            <div class="content">
+                <p class="content-big">We Create The Art <br> Of Stylish Living <br> Stylishly</p>
+                <p class="content-lil">It is a long established fact that a reader will be <br> distracted by the of readable content of a page <br> when lookings at its layouts the points of using <br> that it has a more-or-less normal.</p>
+                <p class="number"><img src="img/Call Icon.svg" alt="">012345678 <br> Call Us Anytime</p>
+                <a href="#" class="btn">Get Free Estimate <img src="img/Vector.svg" alt=""></a>
+            </div>
+
+            <img src="img/home_2.png" alt="" class="about-us-img">
+        </div>
+
+        <div class="testimonial">
+            <p class="testimonial-head">What the People Thinks <br> About Us</p>
+            <div class="testimonials">
+
+                <div class="person">
+                    <div class="person-head">
+                        <img src="img/testimonial_1.png" alt="">
+                        <p class="person-did">Nattasha Mith</p>
+                        <p class="person-lil">Sydney, USA</p>
+                    </div>
+                    <p class="person-footer">Lorem Ipsum is simply dummy <br> text of the typesetting industry. <br> Ipsum has been.</p>                    
+                </div>
+
+                <div class="person">
+                    <div class="person-head">
+                        <img src="img/testimonial_2.png" alt="">
+                        <p class="person-did">Raymond Galario</p>
+                        <p class="person-lil">Sydney, Australia</p>
+                    </div>
+                    <p class="person-footer">Lorem Ipsum is simply dummy <br> text of the typesetting industry. <br> Ipsum has been scrambled it <br> to make a type book.</p>                    
+                </div>
+
+                <div class="person">
+                    <div class="person-head">
+                        <img src="img/testimonial_3.png" alt="">
+                        <p class="person-did">Benny Roll</p>
+                        <p class="person-lil">Sydney, New York</p>
+                    </div>
+                    <p class="person-footer">Lorem Ipsum is simply dummy <br> text of the typesetting industry. <br> Ipsum has been scrambled.</p>                    
+                </div>
+
+            </div>
+        </div>
+
+        <div class="client-logo">
+            <img src="img/client-logo_1.png" alt="">
+            <img src="img/client-logo_2.png" alt="">
+            <img src="img/client-logo_3.png" alt="">
+            <img src="img/client-logo_4.png" alt="">
+            <img src="img/client-logo_5.png" alt="">
+        </div>
+
+        <div class="project">
+            <div class="project-head">
+                <p class="project-head-big">Follow Our Projects</p>
+                <p class="project-head-lil">It is a long established fact that a reader will be distracted by the of readable <br> content of page lookings at its layouts points.</p>
+            </div>
+
+            <div class="projects">
+
+                <div class="projects-content">
+                    <img src="img/project_1.png" alt="" class="pro-con-img">
+                    <div class="pro-text">
+                        <p class="pro-text-did">Modern Kitchan</p>
+                        <p class="pro-text-lil">Decor / Architecture</p>
+                        <a href="#"><img src="img/next.svg" alt="next"></a>
+                    </div>
+                </div>
+
+                <div class="projects-content">
+                    <img src="img/project_2.png" alt="" class="pro-con-img pro-con-img-2">
+                    <div class="pro-text">
+                        <p class="pro-text-did">Modern Kitchan</p>
+                        <p class="pro-text-lil">Decor / Architecture</p>
+                        <a href="#"><img src="img/next.svg" alt="next"></a>
+                    </div>
+                </div>
+
+                <div class="projects-content">
+                    <img src="img/project_3.png" alt="" class="pro-con-img pro-con-img-3">
+                    <div class="pro-text">
+                        <p class="pro-text-did">Modern Kitchan</p>
+                        <p class="pro-text-lil">Decor / Architecture</p>
+                        <a href="#"><img src="img/next.svg" alt="next"></a>
+                    </div>
+                </div>
+
+                <div class="projects-content">
+                    <img src="img/project_4.png" alt="" class="pro-con-img pro-con-img-4">
+                    <div class="pro-text">
+                        <p class="pro-text-did">Modern Kitchan</p>
+                        <p class="pro-text-lil">Decor / Architecture</p>
+                        <a href="#"><img src="img/next.svg" alt="next"></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="counter">
+            <div class="counters">
+                <div class="counters-section">
+                    <p class="counters-text-did">12</p>
+                    <p class="counters-text-lil">Years Of Experiance</p>
+                </div>
+
+                <div class="stick"></div>
+
+                <div class="counters-section">
+                    <p class="counters-text-did">85</p>
+                    <p class="counters-text-lil">Success Project</p>
+                </div>
+
+                <div class="stick"></div>
+
+                <div class="counters-section">
+                    <p class="counters-text-did">15</p>
+                    <p class="counters-text-lil">Active Project</p>
+                </div>
+
+                <div class="stick"></div>
+
+                <div class="counters-section">
+                    <p class="counters-text-did">95</p>
+                    <p class="counters-text-lil">Happy Costumers</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="blog">
+            <div class="blog-head">
+                <p class="blog-head-did">Articles & News</p>
+                <p class="blog-head-lil">It is a long established fact that a reader will be distracted by the of readable content <br> of a page when lookings at its layouts the points of using.</p>
+            </div>
+
+            <div class="blogs">
+                <div class="blog-section">
+                    <img src="img/blog_1.png" alt="" class="blog-img">
+                    <div class="sub-content">
+                        <p class="sub-text">Let’s Get Solution For <br> Building Construction <br> Work</p>
+                    </div>
+                    <div class="date">
+                        <p class="date-text">26 December,2022</p>
+                        <img src="img/next.svg" alt="">
+                        <img src="img/next-hover.png" alt="" class="hover-img">
+                    </div>
+                </div>
+
+                <div class="blog-section">
+                    <img src="img/blog_1.png" alt="" class="blog-img">
+                    <div class="sub-content">
+                        <p class="sub-text">Let’s Get Solution For <br> Building Construction <br> Work</p>
+                    </div>
+                    <div class="date">
+                        <p class="date-text">26 December,2022</p>
+                        <img src="img/next.svg" alt="">
+                        <img src="img/next-hover.png" alt="" class="hover-img">
+                    </div>
+                </div>
+
+                <div class="blog-section">
+                    <img src="img/blog_1.png" alt="" class="blog-img">
+                    <div class="sub-content">
+                        <p class="sub-text">Let’s Get Solution For <br> Building Construction <br> Work</p>
+                    </div>
+                    <div class="date">
+                        <p class="date-text">26 December,2022</p>
+                        <img src="img/next.svg" alt="" >
+                        <img src="img/next-hover.png" alt="" class="hover-img">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="contact">
+            <div class="contact-text">
+                <p class="contact-text-did">Wanna join the interno?</p>
+                <p class="contact-text-lil">It is a long established fact will be distracted.</p>
+                <a href="#" class="btn">Get Started <img src="img/Vector_2.svg" alt="vectore"></a>
+            </div>
+
+            
+        </div>
+
+    </main>
 
     <footer></footer>
 
