--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <nav class="navbar">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#">Page</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Project</a></li>
                 <li><a href="#">Blog</a></li>
@@ -249,7 +249,66 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+
+        <div class="footer">
+            <div class="interno">
+                <div class="internos">
+                    <div class="footer-logo">
+                        <img src="img/Logo.png" alt="logo">
+                        <h1>Interno</h1>
+                    </div>
+                    <p class="internos-text">It is a long established fact that a reader <br> will be distracted lookings.</p>
+                    <div class="footer-icons">
+                        <ul>
+                            <ul>
+                                <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                                <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                                <li><a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
+                                <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                            </ul>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footer-pages">
+                    <p class="footer-pages-text">Pages</p>
+                    <div class="footer-pages-coll">
+                        <a href="#">About Us</a>
+                        <a href="#">Our Projects</a>
+                        <a href="#">Our Team</a>
+                        <a href="#">Contact Us</a>
+                        <a href="#">Services</a>
+                    </div>
+                </div>
+
+                <div class="footer-services">
+                    <p class="footer-services-text">Services</p>
+                    <div class="footer-services-coll">
+                        <a href="#">Kitchen</a>
+                        <a href="#">Living Area</a>
+                        <a href="#">Bathroom</a>
+                        <a href="#">Dinning Hall</a>
+                        <a href="#">Bedroom</a>
+                    </div>
+                </div>
+
+                <div class="footer-contact">
+                    <p class="footer-contact-text">Contact</p>
+                    <div class="footer-contact-coll">
+                        <p class="footer-contact-1">55 East Birchwood Ave. <br> Brooklyn, New York 11201</p>
+                        <p class="footer-contact-2">contact@interno.com</p>
+                        <p class="footer-contact-3">(123) 456 - 789</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-copyright">
+            <p>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</p>
+        </div>
+
+    </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
