about page added

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="content">
                 <p class="content-big">We Create The Art <br> Of Stylish Living <br> Stylishly</p>
                 <p class="content-lil">It is a long established fact that a reader will be <br> distracted by the of readable content of a page <br> when lookings at its layouts the points of using <br> that it has a more-or-less normal.</p>
-                <p class="number"><img src="img/Call Icon.svg" alt="">012345678 <br> Call Us Anytime</p>
-                <a href="#" class="btn">Get Free Estimate <img src="img/Vector.svg" alt=""></a>
+                <p class="number"><img src="img/Call Icon.svg" alt="call-icon">012345678 <br> Call Us Anytime</p>
+                <a href="#" class="btn">Get Free Estimate <img src="img/Vector.svg" alt="vector"></a>
             </div>
 
             <img src="img/home_2.png" alt="" class="about-us-img">
