finished about page

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <div class="about-us">
+        <div class="about-us home-about-us">
             <div class="quotes">
                 <divc class="quotes-content">
                     <p class="quotation">“</p>
@@ -51,7 +51,51 @@
                 </divc>
             </div>
 
+            <div class="about-ourjob">
+                <div class="ourjob">
+                    <div class="ourjob-content">
+                        <div class="ourjob-content-text">
+                            <p class="ourjob-content-text-did">What We Do</p>
+                            <p class="ourjob-content-text-lil">It is a long established fact that a reader will be <br> distracted by the of readable content of a page <br> when lookings at its layouts the points of using <br> that it has a more-or-less normal.</p>
+                        </div>
+                        <a href="#">Our Concept <img src="img/Vector.svg" alt="vectore"></a>
+                    </div>
+                    <img src="img/what-we-do.png" alt="what-we-do" class="ourjob-img">
+                </div>
 
+                <div class="ourjob">
+                    <div class="ourjob-content result-content">
+                        <div class="ourjob-content-text">
+                            <p class="ourjob-content-text-did">The End Result</p>
+                            <p class="ourjob-content-text-lil">It is a long established fact that a reader will be <br> distracted by the of readable content of a page <br> when lookings at its layouts the points of using <br> that it has a more-or-less normal.</p>
+                        </div>
+                        <a href="#">Our Portfolio <img src="img/Vector.svg" alt="vectore"></a>
+                    </div>
+                    <img src="img/result.png" alt="what-we-do" class="ourjob-img result-img">
+                </div>
+            </div>
+
+            <div class="aboutus-team">
+                <div class="aboutus-team-content">
+                    <p class="aboutus-team-text">What the People Thinks <br> About Us</p>
+                    <div class="aboutus-team-container">
+                        <img src="img/team_1.png" alt="">
+                        <img src="img/team_2.png" alt="">
+                        <img src="img/team_1.png" alt="">
+                        <img src="img/team_3.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="aboutus-mailbox">
+                <p class="aboutus-mailbox-text">Creative project? Let's have <br> a productive talk.</p>
+                <form action="#" class="mailbox-input">
+                    <input type="name" name="name" id="name" placeholder="Name" required>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                </form>  
+                <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Hello I'am intrested in..."></textarea>      
+                <button class="mailbox-btn" type="submit">Send Now <img src="img/Vector.svg" alt="vectore"></button>
+            </div>
         </div>
     </main>
 
@@ -80,7 +124,7 @@
                 <div class="footer-pages">
                     <p class="footer-pages-text">Pages</p>
                     <div class="footer-pages-coll">
-                        <a href="#">About Us</a>
+                        <a href="about.html">About Us</a>
                         <a href="#">Our Projects</a>
                         <a href="#">Our Team</a>
                         <a href="#">Contact Us</a>
