--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div class="about-us">
+        <div class="home-about-us">
             <div class="content">
                 <p class="content-big">We Create The Art <br> Of Stylish Living <br> Stylishly</p>
                 <p class="content-lil">It is a long established fact that a reader will be <br> distracted by the of readable content of a page <br> when lookings at its layouts the points of using <br> that it has a more-or-less normal.</p>
@@ -274,7 +274,7 @@
                 <div class="footer-pages">
                     <p class="footer-pages-text">Pages</p>
                     <div class="footer-pages-coll">
-                        <a href="#">About Us</a>
+                        <a href="about.html">About Us</a>
                         <a href="#">Our Projects</a>
                         <a href="#">Our Team</a>
                         <a href="#">Contact Us</a>
