finished team page

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                     <div class="aboutus-team-container">
                         <img src="img/team_1.png" alt="">
                         <img src="img/team_2.png" alt="">
-                        <img src="img/team_1.png" alt="">
+                        <img src="img/team_4.png" alt="">
                         <img src="img/team_3.png" alt="">
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                     <div class="footer-pages-coll">
                         <a href="about.html">About Us</a>
                         <a href="#">Our Projects</a>
-                        <a href="#">Our Team</a>
+                        <a href="team.html">Our Team</a>
                         <a href="#">Contact Us</a>
                         <a href="#">Services</a>
                     </div>
