--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <div class="footer-pages-coll">
                         <a href="about.html">About Us</a>
                         <a href="#">Our Projects</a>
-                        <a href="#">Our Team</a>
+                        <a href="team.html">Our Team</a>
                         <a href="#">Contact Us</a>
                         <a href="#">Services</a>
                     </div>
