added team single pages

--- a/team.html
+++ b/team.html
@@ -43,7 +43,9 @@
         <div class="team-main">
             <div class="team-main-container">
                 <div class="team-container-ppl">
-                    <img src="img/team_1.png" alt="">
+                    <a href="team-single/team-single-1.html">
+                        <img src="img/team_1.png" alt="">
+                    </a>
                     <div class="team-container-details">
                         <p class="team-container-details-did">Charlotte Levi</p>
                         <p class="team-container-details-lil">Design, Australia</p>
@@ -55,7 +57,9 @@
                 </div>
 
                 <div class="team-container-ppl">
-                    <img src="img/team_2.png" alt="">
+                    <a href="team-single/team-single-2.html">
+                        <img src="img/team_2.png" alt="">
+                    </a>
                     <div class="team-container-details">
                         <p class="team-container-details-did">Nattasha Julia</p>
                         <p class="team-container-details-lil">Design, Australia</p>
@@ -67,7 +71,9 @@
                 </div>
 
                 <div class="team-container-ppl">
-                    <img src="img/team_4.png" alt="">
+                    <a href="team-single/team-single-4.html">
+                        <img src="img/team_4.png" alt="">
+                    </a>
                     <div class="team-container-details">
                         <p class="team-container-details-did">John Smith</p>
                         <p class="team-container-details-lil">Design, Australia</p>
@@ -79,7 +85,9 @@
                 </div>
 
                 <div class="team-container-ppl">
-                    <img src="img/team_3.png" alt="">
+                    <a href="team-single/team-single-3.html">
+                        <img src="img/team_3.png" alt="">
+                    </a>
                     <div class="team-container-details">
                         <p class="team-container-details-did">Nora Owen</p>
                         <p class="team-container-details-lil">Design, Australia</p>
@@ -93,7 +101,9 @@
 
             <div class="team-main-container">
                 <div class="team-container-ppl">
-                    <img src="img/team_5.png" alt="">
+                    <a href="team-single/team-single-5.html">
+                        <img src="img/team_5.png" alt="">
+                    </a>
                     <div class="team-container-details">
                         <p class="team-container-details-did">Sofia Carter</p>
                         <p class="team-container-details-lil">Design, Australia</p>
@@ -105,7 +115,9 @@
                 </div>
 
                 <div class="team-container-ppl">
-                    <img src="img/team_6.png" alt="">
+                    <a href="team-single/team-single-6.html">
+                        <img src="img/team_6.png" alt="">
+                    </a>
                     <div class="team-container-details">
                         <p class="team-container-details-did">Avery Jackson</p>
                         <p class="team-container-details-lil">Design, Australia</p>
@@ -117,7 +129,9 @@
                 </div>
 
                 <div class="team-container-ppl">
-                    <img src="img/team_7.png" alt="">
+                    <a href="team-single/team-single-7.html">
+                        <img src="img/team_7.png" alt="">
+                    </a>
                     <div class="team-container-details">
                         <p class="team-container-details-did">Luna James</p>
                         <p class="team-container-details-lil">Design, Australia</p>
@@ -129,7 +143,9 @@
                 </div>
 
                 <div class="team-container-ppl">
-                    <img src="img/team_8.png" alt="">
+                    <a href="team-single/team-single-8.html">
+                        <img src="img/team_8.png" alt="">
+                    </a>
                     <div class="team-container-details">
                         <p class="team-container-details-did">Gianna Mateo</p>
                         <p class="team-container-details-lil">Design, Australia</p>
