--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Interior Design</title>
 </head>
 <body>
@@ -12,16 +12,16 @@
 
         <div class="header">
             <div class="logo">
-                <img src="../img/Logo.png" alt="logo">
+                <img src="img/Logo.png" alt="logo">
                 <h1>Interno</h1>
             </div>
             <nav class="navbar">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Project</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
                 <li><a href="#"><ion-icon name="search"></ion-icon></a></li>
             </nav>
 
@@ -33,38 +33,47 @@
 
     <main>
         <div class="about-banner">
-            <img src="../img/about-banner.png" alt="about-banner">
+            <img src="img/about-banner.png" alt="about-banner">
             <div class="about-banner-aboutus">
-                <p class="about-banner-did">Our Professional</p>
-                <p class="about-banner-lil">Home / Team Single</p>
+                <p class="about-banner-did">Contact Us</p>
+                <p class="about-banner-lil">Home / Contact</p>
             </div>
         </div>
 
-        <div class="team-member-detail">
-            <img src="../img/team_1.png" alt="" class="tmd-img">
-
-            <div class="tmd-sub-content">
-                <div class="tmd-sub-content-text">
-                    <p class="tmd-sub-content-did">John Smith</p>
-                    <p class="tmd-sub-content-pat">Designer</p>
-                    <p class="tmd-sub-content-lil">Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem <br> vitae turpmaximus.posuere in.Contrpobelie frandomised <br> words which don't look even slightly believable.</p>
-                </div>
-                <div class="tmd-social">
-                    <p><img src="../img/email-icon_2.png" alt=""> info@yourdomain.com</p>
-                    <p><img src="../img/phone2-icon.svg" alt=""> +1 (378) 400-1234</p>
-                    <p><img src="../img/earth-icon.svg" alt=""> www.yourdomain.com</p>
-                </div>
-
-                <div class="tmd-contact">
-                    <ul>
-                        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                    </ul>
-                </div>
+       <div class="contact-form">
+        <p class="contact-form-head">We love meeting new people <br> and helping them.</p>
+        <div class="contact-form-main">
+            <div class="contact-form-details">
+                <p><img src="img/email-icon.png" alt=""> info@yourdomain.com</p>
+                <p><img src="img/phone_3-icon.png" alt=""> +1 (378) 400-1234</p>
+                <p><img src="img/earth_2-icon.png" alt=""> www.yourdomain.com</p>
+            </div>
+            <div class="contact-form-social">
+                <ul>
+                    <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                </ul>
             </div>
         </div>
+        <div class="contact-mailbox">
+            <form action="#" class="contact-input">
+                <input type="name" name="name" id="name" placeholder="Name" required>
+                <input type="email" name="email" id="email" placeholder="Email" required>
+            </form> 
+            <form action="#" class="contact-input-2">
+                <input type="subject" name="subject" id="subject" placeholder="subject" required>
+                <input type="phone" name="phone" id="phone" placeholder="Phone" required>
+            </form>  
+            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Hello I'am intrested in..."></textarea>      
+            <button class="mailbox-btn contact-btn" type="submit">Send Now <img src="img/Vector.svg" alt="vectore"></button>
+        </div>
+       </div>
+
+       <div class="contact-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2974.3964136213467!2d44.770239275900586!3d41.79822007125062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40446e78613dc133%3A0x7dc6e4f283f28996!2z4YOo4YOQ4YOV4YOYIOGDluGDpuGDleGDmOGDoSDhg6Hhg5Dhg5Thg6Dhg5fhg5Dhg6jhg53hg6Dhg5jhg6Hhg50g4YOj4YOc4YOY4YOV4YOU4YOg4YOh4YOY4YOi4YOU4YOi4YOY!5e0!3m2!1ska!2sge!4v1698090903447!5m2!1ska!2sge" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map" class="map"></iframe>
+    </div>
 
     </main>
 
@@ -74,7 +83,7 @@
             <div class="interno">
                 <div class="internos">
                     <div class="footer-logo">
-                        <img src="../img/Logo.png" alt="logo">
+                        <img src="img/Logo.png" alt="logo">
                         <h1>Interno</h1>
                     </div>
                     <p class="internos-text">It is a long established fact that a reader <br> will be distracted lookings.</p>
@@ -93,10 +102,10 @@
                 <div class="footer-pages">
                     <p class="footer-pages-text">Pages</p>
                     <div class="footer-pages-coll">
-                        <a href="../about.html">About Us</a>
+                        <a href="about.html">About Us</a>
                         <a href="#">Our Projects</a>
-                        <a href="../team.html">Our Team</a>
-                        <a href="../contact.html">Contact Us</a>
+                        <a href="team.html">Our Team</a>
+                        <a href="contact.html">Contact Us</a>
                         <a href="#">Services</a>
                     </div>
                 </div>
