--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Project</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#"><ion-icon name="search"></ion-icon></a></li>
             </nav>
 
@@ -277,7 +277,7 @@
                         <a href="about.html">About Us</a>
                         <a href="#">Our Projects</a>
                         <a href="team.html">Our Team</a>
-                        <a href="#">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                         <a href="#">Services</a>
                     </div>
                 </div>
