--- a/team-single/team-single-5.html
+++ b/team-single/team-single-5.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Project</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="../contact.html">Contact</a></li>
                 <li><a href="#"><ion-icon name="search"></ion-icon></a></li>
             </nav>
 
@@ -50,7 +50,7 @@
                     <p class="tmd-sub-content-lil">Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem <br> vitae turpmaximus.posuere in.Contrpobelie frandomised <br> words which don't look even slightly believable.</p>
                 </div>
                 <div class="tmd-social">
-                    <p><img src="../img/email-icon.jpg" alt=""> info@yourdomain.com</p>
+                    <p><img src="../img/email-icon_2.png" alt=""> info@yourdomain.com</p>
                     <p><img src="../img/phone2-icon.svg" alt=""> +1 (378) 400-1234</p>
                     <p><img src="../img/earth-icon.svg" alt=""> www.yourdomain.com</p>
                 </div>
@@ -96,7 +96,7 @@
                         <a href="../about.html">About Us</a>
                         <a href="#">Our Projects</a>
                         <a href="../team.html">Our Team</a>
-                        <a href="#">Contact Us</a>
+                        <a href="../contact.html">Contact Us</a>
                         <a href="#">Services</a>
                     </div>
                 </div>
